@@ -17,6 +17,10 @@ Web::Simple            = 0.030
 version           = 0.88
 Module::Build     = 0.4004
 
+[Prereqs / BuildRequires]
+version           = 0.88
+Module::Build     = 0.4004
+
 [Prereqs / TestRequires]
 version           = 0.88
 Class::Usul       = v0.65.0
