@@ -1,5 +1,8 @@
 Revision history for Web::Components
 
+          - Added badge markup
+          - Use BuildRequires not TestRequires for Kwalitee
+
 0.4.1     2015-08-28 15:38:13
           - Added strictures to Loader for Kwalitee's benefit
 
